--- a/ntcore/src/generate/main/dotnet/NetworkTableValue.cs.jinja
+++ b/ntcore/src/generate/main/dotnet/NetworkTableValue.cs.jinja
@@ -13,7 +13,7 @@ using NetworkTables.Natives;
 namespace NetworkTables;
 
 /** A network table entry value. */
-[NativeMarshalling(typeof(NtValueMarshaller))]
+[NativeMarshalling(typeof(NetworkTableValueMarshaller))]
 [StructLayout(LayoutKind.Auto)]
 public readonly struct NetworkTableValue {
 
