--- a/ntcore/src/generate/main/dotnet/Entry.cs.jinja
+++ b/ntcore/src/generate/main/dotnet/Entry.cs.jinja
@@ -11,7 +11,7 @@ namespace NetworkTables;
  *
  * <p>Unlike NetworkTableEntry, the entry goes away when close() is called.
  */
-public interface {{ TypeName }}Entry : {{ TypeName }}Subscriber, {{ TypeName }}Publisher {
+public interface I{{ TypeName }}Entry : I{{ TypeName }}Subscriber, I{{ TypeName }}Publisher {
   /** Stops publishing the entry if it's published. */
   void Unpublish();
 }
