--- a/ntcore/src/generate/main/dotnet/Topic.cs.jinja
+++ b/ntcore/src/generate/main/dotnet/Topic.cs.jinja
@@ -50,13 +50,13 @@ public class {{ TypeName }}Topic : Topic {
    * @param options subscribe options
    * @return subscriber
    */
-  public {{ TypeName }}Subscriber Subscribe(
+  public I{{ TypeName }}Subscriber Subscribe(
 {%- if not TypeString %}
       string typeString,
 {% endif %}
       {{ dotnet.ValueType }} defaultValue,
       PubSubOptions options) {
-    return new {{ TypeName }}EntryImpl(
+    return new {{ TypeName }}EntryImpl<NtSubscriber>(
         this,
         NtCore.Subscribe(
             Handle, NetworkTableType.{{ TypeName }},
@@ -80,11 +80,11 @@ public class {{ TypeName }}Topic : Topic {
    * @param options subscribe options
    * @return subscriber
    */
-  public {{ TypeName }}Subscriber SubscribeEx(
+  public I{{ TypeName }}Subscriber SubscribeEx(
       string typeString,
       {{ dotnet.ValueType }} defaultValue,
       PubSubOptions options) {
-    return new {{ TypeName }}EntryImpl(
+    return new {{ TypeName }}EntryImpl<NtSubscriber>(
         this,
         NtCore.Subscribe(
             Handle, NetworkTableType.{{ TypeName }},
@@ -110,12 +110,12 @@ public class {{ TypeName }}Topic : Topic {
    * @param options publish options
    * @return publisher
    */
-  public {{ TypeName }}Publisher Publish(
+  public I{{ TypeName }}Publisher Publish(
 {%- if not TypeString %}
       string typeString,
 {% endif %}
       PubSubOptions options) {
-    return new {{ TypeName }}EntryImpl(
+    return new {{ TypeName }}EntryImpl<NtPublisher>(
         this,
         NtCore.Publish(
             Handle, NetworkTableType.{{ TypeName }},
@@ -141,11 +141,11 @@ public class {{ TypeName }}Topic : Topic {
    * @return publisher
    * @throws IllegalArgumentException if properties is not a JSON object
    */
-  public {{ TypeName }}Publisher PublishEx(
+  public I{{ TypeName }}Publisher PublishEx(
       string typeString,
       string properties,
       PubSubOptions options) {
-    return new {{ TypeName }}EntryImpl(
+    return new {{ TypeName }}EntryImpl<NtPublisher>(
         this,
         NtCore.PublishEx(
             Handle, NetworkTableType.{{ TypeName }},
@@ -176,13 +176,13 @@ public class {{ TypeName }}Topic : Topic {
    * @param options publish and/or subscribe options
    * @return entry
    */
-  public {{ TypeName }}Entry GetEntry(
+  public I{{ TypeName }}Entry GetEntry(
 {%- if not TypeString %}
       string typeString,
 {% endif %}
       {{ dotnet.ValueType }} defaultValue,
       PubSubOptions options) {
-    return new {{ TypeName }}EntryImpl(
+    return new {{ TypeName }}EntryImpl<NtEntry>(
         this,
         NtCore.GetEntry(
             Handle, NetworkTableType.{{ TypeName }},
@@ -211,11 +211,11 @@ public class {{ TypeName }}Topic : Topic {
    * @param options publish and/or subscribe options
    * @return entry
    */
-  public {{ TypeName }}Entry GetEntryEx(
+  public I{{ TypeName }}Entry GetEntryEx(
       string typeString,
       {{ dotnet.ValueType }} defaultValue,
       PubSubOptions options) {
-    return new {{ TypeName }}EntryImpl(
+    return new {{ TypeName }}EntryImpl<NtEntry>(
         this,
         NtCore.GetEntry(
             Handle, NetworkTableType.{{ TypeName }},
