--- a/ntcore/src/generate/main/dotnet/GenericPublisher.cs.jinja
+++ b/ntcore/src/generate/main/dotnet/GenericPublisher.cs.jinja
@@ -7,46 +7,9 @@
 namespace NetworkTables;
 
 /** NetworkTables generic publisher. */
-public interface IGenericPublisher : Publisher {
-
-  /**
-   * Publish a new value.
-   *
-   * @param value value to publish
-   * @return False if the topic already exists with a different type
-   */
-  bool Set(in NetworkTableValue value);
-
-  /**
-   * Publish a new value.
-   *
-   * @param value value to publish
-   * @return False if the topic already exists with a different type
-   * @throws IllegalArgumentException if the value is not a known type
-   */
-  bool SetValue<T>(T value) {
-    return SetValue(value, 0);
-  }
-
-  /**
-   * Publish a new value.
-   *
-   * @param value value to publish
-   * @param time timestamp; 0 indicates current NT time should be used
-   * @return False if the topic already exists with a different type
-   * @throws IllegalArgumentException if the value is not a known type
-   */
-  bool SetValue<T>(T value, long time);
+public partial interface IGenericPublisher
+{
 {% for t in types %}
-  /**
-   * Publish a new value.
-   *
-   * @param value value to publish
-   * @return False if the topic already exists with a different type
-   */
-  bool Set{{ t.TypeName }}({{ t.dotnet.ValueType }} value) {
-    return Set{{ t.TypeName }}(value, 0);
-  }
   /**
    * Publish a new value.
    *
@@ -54,25 +17,10 @@ public interface IGenericPublisher : Publisher {
    * @param time timestamp; 0 indicates current NT time should be used
    * @return False if the topic already exists with a different type
    */
-  bool Set{{ t.TypeName }}({{ t.dotnet.ValueType }} value, long time);
-{% endfor %}
-  /**
-   * Sets the entry's value if it does not exist.
-   *
-   * @param defaultValue the default value to set
-   * @return False if the entry exists with a different type
-   */
-  bool SetDefault(in NetworkTableValue defaultValue);
+  bool Set{{ t.TypeName }}(long time, {{ t.dotnet.ValueType }} value);
 
-  /**
-   * Sets the entry's value if it does not exist.
-   *
-   * @param defaultValue the default value to set
-   * @return False if the entry exists with a different type
-   * @throws IllegalArgumentException if the value is not a known type
-   */
-  bool SetDefaultValue<T>(T defaultValue);
-{% for t in types %}
+  bool Set{{ t.TypeName }}({{ t.dotnet.ValueType }} value);
+
   /**
    * Sets the entry's value if it does not exist.
    *
