--- a/ntcore/src/generate/main/dotnet/Subscriber.cs.jinja
+++ b/ntcore/src/generate/main/dotnet/Subscriber.cs.jinja
@@ -40,7 +40,7 @@ public interface I{{ TypeName }}Subscriber : Subscriber {
    *
    * @return timestamped value
    */
-  Timestamped{{ TypeName }} GetAtomic();
+  TimestampedObject<{{ dotnet.ValueType }}> GetAtomic();
 
   /**
    * Get the last published value along with its timestamp
@@ -50,7 +50,7 @@ public interface I{{ TypeName }}Subscriber : Subscriber {
    * @param defaultValue default value to return if no value has been published
    * @return timestamped value
    */
-  Timestamped{{ TypeName }} GetAtomic({{ dotnet.ValueType }} defaultValue);
+  TimestampedObject<{{ dotnet.ValueType }}> GetAtomic({{ dotnet.ValueType }} defaultValue);
 
   /**
    * Get an array of all value changes since the last call to readQueue.
@@ -62,7 +62,7 @@ public interface I{{ TypeName }}Subscriber : Subscriber {
    * @return Array of timestamped values; empty array if no new changes have
    *     been published since the previous call.
    */
-  Timestamped{{ TypeName }}[] ReadQueue();
+  TimestampedObject<{{ dotnet.ValueType }}>[] ReadQueue();
 
   /**
    * Get an array of all value changes since the last call to readQueue.
