Fix a few compile issues

--- a/ntcore/src/generate/main/dotnet/NetworkTableValue.cs.jinja
+++ b/ntcore/src/generate/main/dotnet/NetworkTableValue.cs.jinja
@@ -58,7 +58,7 @@ public readonly partial struct NetworkTableValue
    * @return The entry value
    */
   public static NetworkTableValue Make{{ t.TypeName }}({{ t.dotnet.ValueType }} value, long time) {
-    return new NetworkTableValue(NetworkTableType.{{ t.TypeName }}, value, type);
+    return new NetworkTableValue(NetworkTableType.{{ t.TypeName }}, value, time);
   }
 {% else %}
   /**
