--- a/ntcore/src/generate/main/dotnet/Publisher.cs.jinja
+++ b/ntcore/src/generate/main/dotnet/Publisher.cs.jinja
@@ -7,7 +7,7 @@
 namespace NetworkTables;
 
 /** NetworkTables {{ TypeName }} publisher. */
-public interface I{{ TypeName }}Publisher : Publisher {
+public interface I{{ TypeName }}Publisher : IPublisher {
   /**
    * Get the corresponding topic.
    *
