--- a/ntcore/src/generate/main/dotnet/Subscriber.cs.jinja
+++ b/ntcore/src/generate/main/dotnet/Subscriber.cs.jinja
@@ -7,7 +7,7 @@
 namespace NetworkTables;
 
 /** NetworkTables {{ TypeName }} subscriber. */
-public interface I{{ TypeName }}Subscriber : Subscriber {
+public interface I{{ TypeName }}Subscriber : ISubscriber {
   /**
    * Get the corresponding topic.
    *
